# preinterpret

./: CHANGELOG.md  Cargo.toml  LICENSE-MIT  README.MD  README.md  local-check-msrv.sh  style-check.sh  style-fix.sh
.github/workflows/: ci.yml
src/: command.rs  commands.rs  internal_prelude.rs  interpreter.rs  lib.rs  parsing.rs  string_conversion.rs
src/commands/: concat_commands.rs  control_flow_commands.rs  core_commands.rs  mod.rs
tests/: ident.rs  literal.rs  simple_test.rs  string.rs
