[package]
name = "preinterpret"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
authors = ["David Edey <github@david-edey.com>"]
description = "The preinterpret! macro provides an intuitive toolkit for simplifying the building of declarative macros. It fills the role as a spritual successor to the paste macro, which was marked as unmaintained in late 2024."
repository = "https://github.com/dhedey/preinterpret"
keywords = ["macros", "declarative-macros", "toolkit", "interpreter", "preprocessor"]
# Categories have to come from https://crates.io/category_slugs
# And whilst there's a development-tools::procedural-macro-helpers, there's no declarative macro category.
categories = ["development-tools", "compilers"]

[lib]
proc-macro = true

[dependencies]
proc-macro2 = { version = "1.0" }
syn = { version = "2.0", default-features = false, features = ["parsing"] }
