[package]
name = "preinterpret"
version = "0.1.1"
edition = "2021"
license = "MIT OR Apache-2.0"
authors = ["David Edey <github@david-edey.com>"]
description = "An intuitive toolkit to simplify declarative macro development"
repository = "https://github.com/dhedey/preinterpret"
keywords = ["macros", "declarative-macros", "toolkit", "interpreter", "preprocessor"]
# Categories have to come from https://crates.io/category_slugs
# And whilst there's a development-tools::procedural-macro-helpers, there's no declarative macro category.
categories = ["development-tools", "compilers"]
# MSRV 1.56.0 is the start of Edition 2021
# If changing this, update the local-check-msrv.sh script, ci.yml, and README.md
rust-version = "1.56.0"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = { version = "1.0" }
syn = { version = "2.0", default-features = false, features = ["parsing"] }
