[package]
name = "preinterpret"
version = "0.2.0"
edition = "2021"
license = "MIT OR Apache-2.0"
authors = ["David Edey <github@david-edey.com>"]
description = "An intuitive toolkit to simplify code generation development"
repository = "https://github.com/dhedey/preinterpret"
keywords = ["macros", "declarative-macros", "toolkit", "interpreter", "preprocessor"]
# Categories have to come from https://crates.io/category_slugs
# And whilst there's a development-tools::procedural-macro-helpers, there's no declarative macro category.
categories = ["development-tools", "compilers"]
# MSRV 1.56.0 is the start of Edition 2021
# MSRV 1.61.0 is the current MSRV of syn
# If changing this, also update the local-check-msrv.sh script and ci.yml
rust-version = "1.61"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = { version = "1.0" }
syn = { version = "2.0", default-features = false, features = ["parsing"] }
